--- a/MaterialDesign.theme.css
+++ b/MaterialDesign.theme.css
@@ -18,7 +18,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Source Code Pro:wght@550&display=swap");
 
 /* Source */
-@import url("https://thecommieaxolotl.github.io/BetterDiscord-Stuff/MaterialDesign/Clients/betterdiscord.css");
+@import url("https://raw.githubusercontent.com/serikawawa/materialthing/main/ball.css");
 
 :root {
     --font-primary: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
