--- a/ball.css
+++ b/ball.css
@@ -1,6 +1,6 @@
 /* MaterialDesign for BetterDiscord */
 
 @import url("https://thecommieaxolotl.github.io/BetterDiscord-Stuff/MaterialDesign/MaterialDesign.css");
-@import url("https://thecommieaxolotl.github.io/BetterDiscord-Stuff/MaterialDesign/Modules/Clients/BetterDiscord.css");
+@import url("https://raw.githubusercontent.com/serikawawa/materialthing/main/balls.css");
 
 /* Quick Fixes */
